# IA-Project

./: .gitignore  README.md  app.py  check_readiness.py  main.py  preprocess.ipynb  pyproject.toml  requirements.txt  setup.sh
.streamlit/: config.toml
data/: .gitkeep
models/: __init__.py  compare_multitarget_models.py  train_model.py
pages/: 1_📊_Overview.py  2_📈_Temporal.py  3_🗺️_Geographic.py  4_🌤️_Conditions.py  5_🔮_Prediction.py  6_ℹ️_About.py  __init__.py
tests/: __init__.py  conftest.py
utils/: __init__.py  data_loader.py  visualizations.py
