[project]
name = "ia-project"
version = "0.1.0"
description = "French Road Accident Analysis and Visualization"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.3.3",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "plotly>=5.18.0",
    "streamlit>=1.52.2",
    "hypothesis>=6.92.0",
    "pytest>=7.4.0",
    "joblib>=1.3.0",
    "xgboost>=2.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
]

[tool.setuptools]
py-modules = []

[tool.setuptools.packages.find]
include = ["utils*", "pages*", "models*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.hypothesis]
max_examples = 100